<resources>
    <string name="app_name">Zhupper</string>

    <string name="request_trip_title">Solicitar Viagem</string>
    <string name="trip_options_title">Opções de Viagem</string>
    <string name="trip_history_title">Histórico de Viagem</string>
    <string name="error_dialog_title">Erro</string>

    <string name="user_id_hint">ID do Usuário</string>
    <string name="source_address_hint">Endereço de Origem</string>
    <string name="destination_address_hint">Endereço de Destino</string>
    <string name="drop_down_driver_selector_hint">Selecione um motorista</string>

    <string name="request_trip_button">Solicitar Viagem</string>
    <string name="exit_button">Sair</string>
    <string name="choose_button">Escolher</string>
    <string name="filter_apply_button">Aplicar Filtro</string>

    <string name="unexpected_error_description">Um erro inesperado ocorreu.</string>
    <string name="network_error_description">Verifique sua conexão com a internet.</string>
    <string name="empty_data_request_trip_error_description">Nenhum motorista encontrado para essa rota, verifique os dados de origem e destino.</string>
    <string name="empty_data_trip_history_error_description">Não foi encontrado histórico de viagem, verifique os dados e tente novamente.</string>
    <string name="check_input_data_error_description">Por favor, confira se todos os dados foram preenchidos.</string>
    <string name="check_user_id_error_description">Por favor, confira se o ID do usuário foi preenchido.</string>

    <string name="map_view_content_description">Mapa</string>
    <string name="image_drive_name_content_description">Nome do motorista</string>
    <string name="image_description_content_description">Descrição do motorista</string>
    <string name="image_vehicle_content_description">Veículo</string>
    <string name="image_review_note_content_description">Avaliação do motorista</string>
    <string name="image_price_content_description">Valor da viagem</string>
    <string name="image_time_content_description">Tempo de viagem</string>
    <string name="image_distance_content_description">Distancia da viagem</string>
    <string name="image_calendar_content_description">Data e hora da viagem</string>

    <string name="spinner_all_drivers">Mostrar todos</string>
    <string name="spinner_mock_driver_one">Homer Simpson</string>
    <string name="spinner_mock_driver_two">Dominic Toretto</string>
    <string name="spinner_mock_driver_three">James Bond</string>
</resources>