<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/medium_margin"
    android:layout_marginVertical="@dimen/small_margin"
    android:background="?attr/selectableItemBackground"
    app:cardCornerRadius="@dimen/medium_corner_radius"
    app:strokeColor="@color/colorIcon"
    app:strokeWidth="@dimen/stroke_width_default">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/medium_margin">

        <ImageView
            android:id="@+id/image_calendar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image_calendar_content_description"
            android:src="@drawable/ic_calendar"
            app:layout_constraintBottom_toBottomOf="@id/text_calendar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/text_calendar" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_calendar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_marginTop="@dimen/medium_margin"
            android:ellipsize="end"
            android:maxLines="@integer/short_text_field_max_line"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/image_calendar"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@tools:sample/lorem" />

        <ImageView
            android:id="@+id/image_driver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image_drive_name_content_description"
            android:src="@drawable/ic_driver"
            app:layout_constraintBottom_toBottomOf="@id/text_driver_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/text_driver_name" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_driver_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_marginTop="@dimen/medium_margin"
            android:ellipsize="end"
            android:maxLines="@integer/short_text_field_max_line"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/image_driver"
            app:layout_constraintTop_toBottomOf="@id/text_calendar"
            tools:text="@tools:sample/lorem" />

        <ImageView
            android:id="@+id/image_origin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/source_address_hint"
            android:src="@drawable/ic_location_off"
            app:layout_constraintBottom_toBottomOf="@id/text_origin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/text_origin" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_origin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_marginTop="@dimen/compact_margin"
            android:ellipsize="end"
            android:maxLines="@integer/long_text_field_max_line"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/image_origin"
            app:layout_constraintTop_toBottomOf="@id/text_driver_name"
            tools:text="@tools:sample/lorem/random" />

        <ImageView
            android:id="@+id/image_destination"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/destination_address_hint"
            android:src="@drawable/ic_location_on"
            app:layout_constraintBottom_toBottomOf="@id/text_destination"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/text_destination" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_destination"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_marginTop="@dimen/compact_margin"
            android:ellipsize="end"
            android:maxLines="@integer/long_text_field_max_line"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/image_destination"
            app:layout_constraintTop_toBottomOf="@id/text_origin"
            tools:text="@tools:sample/lorem/random" />

        <ImageView
            android:id="@+id/image_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image_distance_content_description"
            android:src="@drawable/ic_distance"
            app:layout_constraintBottom_toBottomOf="@id/text_distance"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/text_distance" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_distance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_marginTop="@dimen/compact_margin"
            android:ellipsize="end"
            android:maxLines="@integer/short_text_field_max_line"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/image_distance"
            app:layout_constraintTop_toBottomOf="@id/text_destination"
            tools:text="@tools:sample/lorem/random" />

        <ImageView
            android:id="@+id/image_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image_time_content_description"
            android:src="@drawable/ic_time"
            app:layout_constraintBottom_toBottomOf="@id/text_time"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/text_time" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_marginTop="@dimen/compact_margin"
            android:ellipsize="end"
            android:maxLines="@integer/short_text_field_max_line"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/image_time"
            app:layout_constraintTop_toBottomOf="@id/text_distance"
            tools:text="@tools:sample/lorem" />

        <ImageView
            android:id="@+id/image_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image_price_content_description"
            android:src="@drawable/ic_price"
            app:layout_constraintBottom_toBottomOf="@id/text_price"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/text_price" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_marginTop="@dimen/compact_margin"
            android:ellipsize="end"
            android:maxLines="@integer/short_text_field_max_line"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/image_price"
            app:layout_constraintTop_toBottomOf="@id/text_time"
            tools:text="@tools:sample/lorem" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>
